@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline


skinparam classAttributeIconSize 0


class PostponeAnEntryUI{
}


class PostponeAnEntryController{
-Agenda agendaRepository
    + PostponeAnEntryController(agenda)
 }

class Repositories {
    - Repositories(): Repositories
    + getInstance() : Repositories
    + getAgenda() : Repositories
    + getEntries() : Repositories
}


class Agenda {
    + getAgenda().getEntries()

}

class  Entry{
        -title
        -description
        -degreeurgency
        -datebegin
        -dateend
        -state
        -greenSpace

}

class EntryDto{
+Entry
+Date
+Time
}


Agenda --> "*" Entry: contains
PostponeAnEntryUI .>  PostponeAnEntryController
PostponeAnEntryController ...l> Repositories
PostponeAnEntryUI .> EntryDto
PostponeAnEntryController ..> EntryDto
Repositories -> Repositories : instance
Repositories "1" --> "*" Entry
Repositories ---> "1" Agenda

 PostponeAnEntryController ....>  Entry
 PostponeAnEntryController ...> "1" Agenda
@enduml